Modifica conversção do .toList, para Collectors.toList()